[metadata]
name = papercast_semanticscholar
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = SemanticScholar Processor plugin for Papercast
url = https://github.com/papercast-dev/papercast-semanticscholar

[options]
packages = find:
install_requires =
    semanticscholar
    requests
    wget
    beautifulsoup4
    # Any dependencies required by the plugin

[options.entry_points]
papercast.processors =
    SemanticScholarProcessor = papercast_semanticscholar:SemanticScholarProcessor
